--- a/summary.qmd
+++ b/summary.qmd
@@ -3,3 +3,5 @@
 In summary, we have used several books by @ahrensHowTakeSmart2022, @russell2021, @bolton2021, @polya2014, @bird2020 and @bird2021
 
 @sec-international-system-of-units: The International System of Units (SI)\index{SI} is the globally accepted standard for measurement. Established to provide a consistent framework for scientific and technical measurements, SI units facilitate clear communication and data comparison across various fields and countries. The system is based on seven fundamental units: the meter for length, the kilogram for mass, the second for time, the ampere for electric current, the kelvin for temperature, the mole for substance, and the candela for luminous intensity.
+
+@sec-scalar-and-vector-quantities: In mathematics and physics, a **scalar**\index{scalar} is a quantity with only magnitude (size), whereas a **vector**\index{vector} has both magnitude and direction. Examples of scalar quantities include numbers, mass, speed, temperature, volume, and time. In contrast, examples of vector quantities include velocity, acceleration, and forces like weight and friction.
