--- a/references.bib
+++ b/references.bib
@@ -64,3 +64,15 @@ month={Mar} }
 	edition = {Ninth edition},
 	address = {Abingdon, Oxon ; New York}
 }
+
+@book{hannah1995,
+	title = {Applied Mechanics},
+	author = {Hannah, J. and Hillier, M. J.},
+	year = {1995},
+	month = {01},
+	date = {1995-01-01},
+	publisher = {Longman Pub Group},
+	edition = {3rd edition},
+	address = {Harlow},
+	langid = {English}
+}
