--- a/index.qmd
+++ b/index.qmd
@@ -5,3 +5,5 @@ This workbook presents a collection of lecture notes on Applied Mechanics, desig
 @sec-international-system-of-units: The International System of Units (SI)\index{SI} is the globally accepted standard for measurement. Established to provide a consistent framework for scientific and technical measurements, SI units facilitate clear communication and data comparison across various fields and countries. The system is based on seven fundamental units: the meter for length, the kilogram for mass, the second for time, the ampere for electric current, the kelvin for temperature, the mole for substance, and the candela for luminous intensity.
 
 @sec-scalar-and-vector-quantities: In mathematics and physics, a **scalar**\index{scalar} is a quantity with only magnitude (size), whereas a **vector**\index{vector} has both magnitude and direction. Examples of scalar quantities include numbers, mass, speed, temperature, volume, and time. In contrast, examples of vector quantities include velocity, acceleration, and forces like weight and friction.
+
+@sec-moment-of-a-force: A **moment**\index{moment} is a mathematical concept that represents the product of a distance and a physical quantity, such as force. Moments are typically defined relative to a fixed reference point and pertain to physical quantities situated at some distance from this point. For instance, the moment of force, commonly referred to as torque, is the product of the force applied to an object and the distance from the reference point to the object.
