--- a/SI_Units.qmd
+++ b/SI_Units.qmd
@@ -2,7 +2,7 @@
 
 ## Objectives
 
--   Recall the based and derived units.
+-   Recall the base and derived units.
 -   Practice the application of unity fraction.
 
 ## Concepts
