--- a/scalar-and-vector-quantities.qmd
+++ b/scalar-and-vector-quantities.qmd
@@ -66,7 +66,7 @@ The resultant is a single force that represents the combined effect of two or mo
 
 Equilibrium of an object occurs when all the forces acting on it are balanced, so the object remains at rest or moves at a constant speed in a straight line. In equilibrium, there is no net force or acceleration, meaning the object is in a stable state without any change in its motion.
 
-![Equilibrant](images/vectordiaE.png){#fig-equilibrant}
+![Equilibrant](images/vectordia-equilibrant.png){#fig-equilibrant}
 
 Conditions of equilibrium:
 
